--- a/MovieRental/Views/CustomerWindow.xaml
+++ b/MovieRental/Views/CustomerWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         xmlns:viewModels="clr-namespace:MovieRental.ViewModels"
         Title="Customer" Height="400" Width="500">
+    <Window.DataContext>
+        <viewModels:CustomerViewModel/>
+    </Window.DataContext>
     <Border Padding="5">
         <Grid>
             <Grid.RowDefinitions>
@@ -18,16 +21,15 @@
             <StackPanel Grid.Row="0" Orientation="Horizontal">
                 <Button Name="RentalButton"
                     Content="Rentals"
-                    Margin="0 0 5 0"/>
+                    Margin="0 0 5 0"
+                    Click="RentalButton_Click"/>
                 <Button Name="CustomerButton"
                     Content="Customers"
                     Margin="0 0 5 0"/>
                 <Button Name="InventoryButton"
                     Content="Inventory"
-                    Margin="0 0 5 0"/>
-                <Button Name="Help"
-                    Content="Help"
-                    Margin="0 0 5 0"/>
+                    Margin="0 0 5 0"
+                    Click="InventoryButton_Click"/>
             </StackPanel>
 
             <!--Search Interface-->
@@ -45,65 +47,55 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Name="CustomerIdLabel"
-                   Grid.Row="0"
-                   Grid.Column="0"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Right"
-                   Content="Customer Id :"
-                   FontWeight="Bold"/>
                 <Label Name="CustomerLastNameLabel"
-                   Grid.Row="1"
+                   Grid.Row="0"
                    Grid.Column="0"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Right"
                    Content="Last Name :"
                    FontWeight="Bold"/>
                 <Label Name="CustomerFirstNameLabel"
-                   Grid.Row="2"
+                   Grid.Row="1"
                    Grid.Column="0"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Right"
                    Content="First Name :"
                    FontWeight="Bold"/>
                 <Label Name="CustomerMembershipDateLabel"
-                       Grid.Row="3"
+                       Grid.Row="2"
                        Grid.Column="0"
                        VerticalAlignment="Center"
                        HorizontalAlignment="Right"
                        Content="Membership Date :"
                        FontWeight="Bold"/>
 
-                <TextBox Name="CustomerIdTextBox"
+                <TextBox Name="LastNameTextBox"
                      Grid.Row="0"
                      Grid.Column="1"
                      Margin="5"
                      MinWidth="100"
-                     HorizontalAlignment="Left"/>
-                <TextBox Name="LastNameTextBox"
+                     HorizontalAlignment="Left"
+                     Text="{Binding SearchLastName, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Name="FirstNameTextBox"
                      Grid.Row="1"
                      Grid.Column="1"
                      Margin="5"
                      MinWidth="100"
-                     HorizontalAlignment="Left"/>
-                <TextBox Name="FirstNameTextBox"
+                     HorizontalAlignment="Left"
+                     Text="{Binding SearchFirstName, UpdateSourceTrigger=PropertyChanged}"/>
+                <DatePicker Name="MebershipTextBox"
                      Grid.Row="2"
-                     Grid.Column="1"
-                     Margin="5"
-                     MinWidth="100"
-                     HorizontalAlignment="Left"/>
-                <TextBox Name="MebershipTextBox"
-                     Grid.Row="3"
                      Grid.Column="2"
                      Margin="5"
                      MinWidth="100"
                      HorizontalAlignment="Left"/>
 
-                <Button Name="Search"
+                <Button Name="ButtonAdd"
                     Grid.Row="4"
                     Grid.Column="0"
                     Margin="3"
-                    Content="Search"/>
+                    Content="Add"
+                    Command="{Binding SaveCustomerCommand}"/>
 
                 <ListBox Name="CustomerSearchResultListBox"
                        Grid.Row="5"
@@ -113,7 +105,18 @@
                        VerticalAlignment="Top"
                        MinWidth="385"
                        MinHeight="100"
-                       Background="LightGray"/>
+                       Background="LightGray"
+                       ItemsSource="{Binding SearchResults}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBox Text="{Binding LastName}"></TextBox>
+                                <TextBox Text="{Binding FirstName}"></TextBox>
+                                <TextBox Text="{Binding MembershipDate}"></TextBox>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </Grid>
         </Grid>
     </Border>
