--- a/MovieRental/Views/InventoryWindow.xaml
+++ b/MovieRental/Views/InventoryWindow.xaml
@@ -21,15 +21,14 @@
             <StackPanel Grid.Row="0" Orientation="Horizontal">
                 <Button Name="RentalButton"
                 Content="Rentals"
-                Margin="0 0 5 0"/>
+                Margin="0 0 5 0"
+                Click="RentalButton_Click"/>
                 <Button Name="CustomerButton"
                 Content="Customers"
-                Margin="0 0 5 0"/>
+                Margin="0 0 5 0"
+                Click="CustomerButton_Click"/>
                 <Button Name="InventoryButton"
                 Content="Inventory"
-                Margin="0 0 5 0"/>
-                <Button Name="Help"
-                Content="Help"
                 Margin="0 0 5 0"/>
             </StackPanel>
 
@@ -48,66 +47,57 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Name="MovieIdLabel"
-               Grid.Row="0"
-               Grid.Column="0"
-               VerticalAlignment="Center"
-               HorizontalAlignment="Right"
-               Content="Movie Id :"
-               FontWeight="Bold"/>
                 <Label Name="MovieTitleLabel"
-               Grid.Row="1"
-               Grid.Column="0"
-               VerticalAlignment="Center"
-               HorizontalAlignment="Right"
-               Content="Movie Title :"
-               FontWeight="Bold"/>
+                Grid.Row="0"
+                Grid.Column="0"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Right"
+                Content="Movie Title :"
+                FontWeight="Bold"/>
                 <Label Name="MovieReleaseYearLabel"
-               Grid.Row="2"
-               Grid.Column="0"
-               VerticalAlignment="Center"
-               HorizontalAlignment="Right"
-               Content="Release Year :"
-               FontWeight="Bold"/>
+                Grid.Row="1"
+                Grid.Column="0"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Right"
+                Content="Release Year :"
+                FontWeight="Bold"/>
                 <Label Name="MovieGenreLabel"
-                   Grid.Row="3"
-                   Grid.Column="0"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Right"
-                   Content="Genre :"
-                   FontWeight="Bold"/>
+                Grid.Row="2"
+                Grid.Column="0"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Right"
+                Content="Genre :"
+                FontWeight="Bold"/>
 
-                <TextBox Name="MovieIdTextBox"
-                 Grid.Row="0"
-                 Grid.Column="1"
-                 Margin="5"
-                 MinWidth="100"
-                 HorizontalAlignment="Left"/>
+
                 <TextBox Name="MovieTitleTextBox"
-                 Grid.Row="1"
+                 Grid.Row="0"
                  Grid.Column="1"
                  Margin="5"
                  MinWidth="100"
                  HorizontalAlignment="Left"
                  Text="{Binding SearchTitle, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBox Name="MovieReleaseYearTextBox"
-                 Grid.Row="2"
+                 Grid.Row="1"
                  Grid.Column="1"
                  Margin="5"
                  MinWidth="100"
-                 HorizontalAlignment="Left"/>
+                 HorizontalAlignment="Left"
+                 Text="{Binding SearchReleaseYear, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBox Name="MovieGenreTextBox"
-                 Grid.Row="3"
+                 Grid.Row="2"
                  Grid.Column="2"
                  Margin="5"
                  MinWidth="100"
-                 HorizontalAlignment="Left"/>
+                 HorizontalAlignment="Left"
+                 Text="{Binding SearchGenre, UpdateSourceTrigger=PropertyChanged}"/>
 
-                <Button Name="Search"
+                <Button Name="ButtonAdd"
                 Grid.Row="4"
                 Grid.Column="0"
                 Margin="3"
-                Content="Search"/>
+                Content="Add"
+                Command="{Binding SaveMovieCommand}"/>
 
                 <ListBox Name="InventorySearchResultListBox"
                    Grid.Row="5"
@@ -123,9 +113,9 @@
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <TextBox Text="{Binding Title}">
-                                    
-                                </TextBox>
+                                <TextBox Text="{Binding Title}"></TextBox>
+                                <TextBox Text="{Binding ReleaseYear}"></TextBox>
+                                <TextBox Text="{Binding Genre}"></TextBox>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
